--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@ swap_context:
   Considerations
   <a class="anchor" href="#considerations">#</a>
 </h2>
-<p>When implementing fibers <strong>you will</strong> run into strange behavior which you cannot explain, this is because fibers violate the flow of control that compilers and debuggers are expecting. The side effects a fiber has on program state is not visible to the compiler or debugger, this can make reasoning and debuging this stuff quite <em>fun</em>.</p>
+<p>When implementing fibers <strong>you will</strong> run into strange behavior which you cannot explain, this is because fibers violate the flow of control that compilers and debuggers are expecting. The side effects a fiber has on program state is not visible to the compiler or debugger, this can make reasoning and debugging this stuff quite <em>fun</em>.</p>
 <h3 id="barriers">
   Barriers
   <a class="anchor" href="#barriers">#</a>
