forgot this one

--- a/index.html
+++ b/index.html
@@ -844,16 +844,16 @@ swap_context:
 </span><span style="color:#a6e22e">+  movq %r15, 8*7(%rdx)
 </span><span style="color:#a6e22e">+  movq %rdi, 8*8(%rdx)
 </span><span style="color:#a6e22e">+  movq %rsi, 8*9(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm6, 8*10+16*0(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm7, 8*10+16*1(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm8, 8*10+16*2(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm9, 8*10+16*3(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm10, 8*10+16*4(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm11, 8*10+16*5(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm12, 8*10+16*6(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm13, 8*10+16*7(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm14, 8*10+16*8(%rdx)
-</span><span style="color:#a6e22e">+  movq %xmm15, 8*10+16*9(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm6, 8*10+16*0(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm7, 8*10+16*1(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm8, 8*10+16*2(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm9, 8*10+16*3(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm10, 8*10+16*4(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm11, 8*10+16*5(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm12, 8*10+16*6(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm13, 8*10+16*7(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm14, 8*10+16*8(%rdx)
+</span><span style="color:#a6e22e">+  movups %xmm15, 8*10+16*9(%rdx)
 </span><span style="color:#a6e22e"></span>
    # Return.
    xorl %eax, %eax
